--- a/requirements.txt
+++ b/requirements.txt
@@ -24,16 +24,16 @@ importlib-metadata==1.3.0
 ipykernel==5.1.3
 ipython==7.11.1
 ipython-genutils==0.2.0
+ipywidgets==7.5.1
 jedi==0.15.2
 Jinja2==2.10.3
 jmespath==0.9.4
 joblib==0.14.1
-json5==0.8.5
 jsonschema==3.2.0
+jupyter==1.0.0
 jupyter-client==5.3.4
+jupyter-console==6.0.0
 jupyter-core==4.6.1
-jupyterlab==1.2.4
-jupyterlab-server==1.0.6
 kiwisolver==1.1.0
 lightgbm==2.3.1
 MarkupSafe==1.1.1
@@ -53,16 +53,17 @@ pickleshare==0.7.5
 Pillow==7.0.0
 pkg-resources==0.0.0
 prometheus-client==0.7.1
-prompt-toolkit==3.0.2
+prompt-toolkit==2.0.10
 protobuf==3.11.2
 ptyprocess==0.6.0
 Pygments==2.5.2
 pyparsing==2.4.6
 pyrsistent==0.15.7
-python-dateutil==2.8.0
+python-dateutil==2.8.1
 pytz==2019.3
 PyYAML==5.3
 pyzmq==18.1.1
+qtconsole==4.6.0
 requests==2.22.0
 s3transfer==0.2.1
 scikit-learn==0.22.1
@@ -75,7 +76,7 @@ terminado==0.8.3
 testpath==0.4.4
 toml==0.10.0
 toolz==0.10.0
-tornado==5.1.1
+tornado==6.0.3
 traitlets==4.3.3
 ttictoc==0.4.1
 tzlocal==2.0.0
@@ -84,4 +85,5 @@ validators==0.14.1
 watchdog==0.9.0
 wcwidth==0.1.8
 webencodings==0.5.1
+widgetsnbextension==3.5.1
 zipp==0.6.0
